# routes/index.js
@@ -1,7 +1,7 @@
-const router = require('express').Router()
+const router = require('express').Router();
 
-router.use('/books', require('./booksRoute'))
-router.use('/users', require('./usersRoute'))
-router.use('/libraryProcesses', require('./libraryProcessesRoute'))
+router.use('/books', require('./booksRoute'));
+router.use('/users', require('./usersRoute'));
+router.use('/libraryProcesses', require('./libraryProcessesRoute'));
 
-module.exports = router
+module.exports = router;
